# rendering-groups

./: .gitignore  Cargo.toml  README-YEW.md  README.md  Trunk.toml  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js
e2e/: resizable-canvas.spec.ts
e2e/fixtures/: expected-states.ts
e2e/helpers/: assertions.ts  canvas-helpers.ts  polygon-helpers.ts
src/: App.tsx  index.css  lib.rs  main.rs  types.ts  utils.ts
src/components/: BoundingBox.tsx  Demo.tsx  ScaleGroup3.tsx  ScaleGroupDemo.tsx  ScaleTransformDemo.tsx  Shape.tsx  Sliders.tsx  Viewport.tsx  ViewportElement.tsx  bounding_box.rs  math.ts  mod.rs  resizable_canvas.rs
src/components/ResizableCanvas/: index.tsx
src/config/: mod.rs  resizeTransforms.ts
src/constants/: canvas.constants.ts  mod.rs
src/hooks/: useResizableCanvas.ts
src/types/: canvas.types.ts  mod.rs
src/utils/: canvas.utils.ts  mod.rs
