[package]
name = "rendering-groups"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = { version = "0.21", features = ["csr"] }
web-sys = { version = "0.3", features = ["HtmlElement", "MouseEvent", "SvgElement", "SvgsvgElement", "DomRect", "SvgPoint", "DomMatrix", "Window", "Element"] }
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
gloo = "0.11"
